--- a/tigamap/templates/tigamap/app.html
+++ b/tigamap/templates/tigamap/app.html
@@ -148,6 +148,9 @@ function removeMe(){
                 </li>
                 <li><a href="{{ hrefs.coverage }}"
                         >{% trans 'Coverage' %}</a></li>
+                <li>
+                <a href="{% trans 'http://atrapaeltigre.com/web/el-mapa-del-mosquit-tigre-2014/' %}" class="btn btn-inverse btn-lg"><span class="glyphicon glyphicon-info-sign"></span></a>
+                </li>
 
             </ul>
 
