fixed series label for coveragestats

--- a/stats/templates/stats/fix_user_chart.html
+++ b/stats/templates/stats/fix_user_chart.html
@@ -123,7 +123,7 @@
                     lineWidth: 1
                   }},
           {
-                name: '{% trans 'Participants with at over fixes' %}',
+                name: '{% trans 'Participants with over 5 fixes' %}',
                 data: fix5users,
                 marker: {
                     enabled: false,
