--- a/tigamap/templates/tigamap/embedded.html
+++ b/tigamap/templates/tigamap/embedded.html
@@ -68,6 +68,17 @@ td {
                                 '{{ report.tigaprob_text }}</td></tr><tr><td>lat:</td>'+
                                 '<td>{{ report.lat }}</td></tr><tr><td>lon:</td><td>'+
                                 '{{ report.lon }}</td></tr></table>';
+                   {% if detailed == 'detailed' %}
+                       popup_text = popup_text + '<br/>Date: {{ report.formatted_date }}';
+                       popup_text = popup_text + '<br/><br/>User: {{ report.user }}';
+                       popup_text = popup_text + '<br/><br/>OS: {{ report.os }}';
+                       {% autoescape off %}
+                       popup_text = popup_text + '<br/><br/>Responses: {{ report.response_html | escapejs }}';
+                       popup_text = popup_text + '<br/><br/>Note: {{ report.note | escapejs }}';
+                       {% endautoescape %}
+                       popup_text = popup_text + '<br/><br/>Photos: {{ report.photo_html | safe }}';
+                   {%  endif %}
+
                      cluster_marker.bindPopup(popup_text);
                     markers_clustered.addLayer(cluster_marker);
                 {% endif %}
