added csv export to admin for photos, improved coverage map

--- a/tigamap/templates/tigamap/app.html
+++ b/tigamap/templates/tigamap/app.html
@@ -20,9 +20,9 @@ var cookieValue = 'on';                     // Value of cookie
 
 function createDiv(){
     var bodytag = document.getElementsByTagName('body')[0];
-    var div = document.createElement('div')
+    var div = document.createElement('div');
     div.style.textAlign='center';
-    div.style.backgroundColor='#F6D10A'
+    div.style.backgroundColor='#F6D10A';
     div.setAttribute('id','cookie-law');
     div.innerHTML = "{% trans 'Our website uses cookies. By continuing we assume your permission to deploy cookies. For more information on our site policies, please see our' %} <a href='{% url 'help.show_privacy' %}'' rel='nofollow' title='{% trans 'Privacy Policy' %}'>{% trans 'privacy policy' %}</a> {% trans 'and'  %} <a href='{% url 'help.show_terms' %}' rel='nofollow' title='{% trans 'User Agreement' %}'>{% trans 'user agreement' %}</a>.&nbsp;&nbsp;<a class='close-cookie-banner' href='javascript:void(0);' onclick='removeMe();'><span style='cursor: pointer;'>X</span></a>";
  // Be advised the Close Banner 'X' link requires jQuery
