--- a/tigacrafting/templates/tigacrafting/validated_photos.html
+++ b/tigacrafting/templates/tigacrafting/validated_photos.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Tigacrafting">
     <meta name="author" content="Movement Ecology Laboratory">
 
-    <title>{% block page_title %}Holet{% endblock %}</title>
+    <title>{% block page_title %}Tigacrafting{% endblock %}</title>
 
     {% block bootstrap_css %}
         <!-- Bootstrap core CSS -->
@@ -42,87 +42,33 @@
 
         <div class="page-header">
 
-            <h1>{{ title }}
-                <small>{{ short_description }} </small></h1>
+            <h1>Photo Validation: {{ type }}</h1>
 
         </div>
 
 
-        {% for highlight in these_highlights %}
+        {% for task in validated_tasks %}
 
-            <script>
-                eval("function map_init_highlight{{ highlight.id }}(map, options) {L.polyline(these_latlngs, {weight: 5, opacity: 1, color: 'black'}).addTo(map);L.polyline(these_latlngs, {weight: 2, opacity: 1, color: 'red'}).addTo(map);L.marker([{{ highlight.step.latitude }}, {{ highlight.step.longitude }}],{icon:{% if highlight.type == 0 %}poi_icon{% else %}wp_icon{% endif %}}).addTo(map);map.setView([{{ highlight.step.latitude }}, {{ highlight.step.longitude }}], 18)}");
-            </script>
 
-            <br>
-
-            <div id="h{{ highlight.id }}" class="row">
+            <div class="row">
 
                 <div class="col-md-4">
-                    <h3>{{ highlight.name }}</h3>
-                    {% if owner %}
-                        <a class="btn btn-default" href={% url "edit_highlight" id highlight.id %} role="button"> <span class="glyphicon glyphicon-edit"></span> </a> <a class="btn btn-default" href={% url 'make_new_highlight_reference' id highlight.id %}> <span class="glyphicon glyphicon-upload"></span>  <span class="glyphicon glyphicon-book"></span> </a> <a class="btn btn-default" href={% url 'create_ii' highlight.id %}> <span class="glyphicon glyphicon-upload"></span>  <span class="glyphicon glyphicon-picture"></span> </a>{% endif %}
-
-
-                    <p>{{ highlight.long_text }}</p>
+                    <h3>{{ task.validation_score }}</h3>
 
                 </div>
 
                 <div class="col-md-4">
-                {% if highlight.media %}
-                    {% if highlight.image %}
-                        <a href={{ highlight.media.url }}><img width=100% src={{ highlight.media.url }}></a>
-                    {% elif highlight.video %}
-                        <video width="100%" height="100%" controls>
-                            <source type="video/{{ highlight.media_ext }}" src={{ highlight.media.url }}>
-                            Your browser does not support the video tag.
-                        </video>
-                    {% endif %}
-                {% endif %}
+
+                    {{ task.photo_image }}
 
                 </div>
 
                 <div class="col-md-4">
-                    <div id="highlight{{ highlight.id }}" class="highlight-container"></div>
                 </div>
 
             </div>
 
 
-
-    {% for ii in highlight.interactive_images %}
-<div class="row">
-
-    <a href="{% url 'view_ii' ii.id %}" type="button" class="btn btn-primary"> <span class="glyphicon glyphicon-picture"></span> Interactive Image{% if highlight.interactive_images|length > 1 %} {{ forloop.counter }}{% endif %}
-</a>
-
-
-</div>
-<br>
-
-        {% endfor %}
-
-
-            {% for ref in highlight.references %}
-<div class="row">
-
-
-    <button onclick="toggle_iframe('ref_div{{ ref.id }}');" type="button" class="btn btn-primary"> <span class="glyphicon glyphicon-chevron-down"></span>  <span class="glyphicon glyphicon-book"></span> Reference{% if highlight.references|length > 1 %}: {{ ref.name }}{% endif %}
-</button>
-
-</div>
-
-<div class="row">
-<div class='ref_div' id='ref_div{{ ref.id }}'>
-<div id='confirm_delete_reference_alert{{ ref.id }}' class='alert alert-warning' role='alert'><p><strong>Warning!</strong>Are you sure you want to delete this reference?</p><br><button onclick="hide_alert({{ ref.id }})" role="button" class='btn btn-success'>No, go back</button> <a class='btn btn-warning' href={% url 'delete_highlight_reference' id ref.id %}>Yes, delete it</a></div>
-<br>
-    {% if owner %}<a class="btn btn-default" href={% url 'edit_highlight_reference' id ref.id %}> <span class="glyphicon glyphicon-edit"></span> </a> <button class="btn btn-default" onclick="confirm_delete_reference({{ ref.id }})"> <span class="glyphicon glyphicon-remove-circle"></span> </button>{% endif %}
-
-              {{ ref.html | safe }}
-</div>
-</div>
-<br>
-{% endfor %}
             <div class="border-row"></div>
 
 
