--- a/tigacrafting/templates/tigacrafting/validated_photos.html
+++ b/tigacrafting/templates/tigacrafting/validated_photos.html
@@ -76,9 +76,12 @@
 
         <div class="page-header">
 
-            <h1>Tigatrapp Photo Validation: {{ type }} <small> See the latest crowdrafting results</small></h1>
+            <h1>{{ title }}</h1>
 
-            <p>The Validation scores shown by each photo range from -1 to 1, and they represent the average of thirty citizen scientists' responses as to whether they see a {{ type }} in the photo. A response of 'yes' has a score of 1, 'no' has a score of -1. A response of 'not sure' or a blank response has a score of 0.</p>
+            <p>The validation scores shown by each photo range from -1 to 1, and they represent the average of thirty citizen scientists' responses to the crowdcrafting question: {{ question }} A response of 'yes' has a score of 1, 'no' has a score of -1. A response of 'not sure' or a blank response has a score of 0.</p>
+
+            <p>Visit the <a href="http://crowdcrafting.org/app/Tigafotos/">Tigafotos</a> project on crowdcrafting to see the questions and help validate more photos!</p>
+
 
         </div>
 
